module_a/tests/fixtures/syntax_error/bad_function/fixture.c
void good_function(void) {
    int x = 1 + 1;
}

void bad_function(void) {
    int x = ;
}

void another_good(void) {
    int y = 0;
}
